feat: 싱글톤 패턴 설정, 필요한 의존성 추가, 바텀네비게이션뷰 설정 등

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,17 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+
+        maven {
+            url 'https://naver.jfrog.io/artifactory/maven/'
+        }
+        maven{
+            url 'https://devrepo.kakao.com/nexus/content/groups/public/'
+        }
+        maven {
+            url 'https://jitpack.io'
+        }
     }
 }
 rootProject.name = "WALKU"
