feat: splash 화면 디자인, 핸들러 처리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
 
     <application
         android:name="com.konkuk.walku.config.ApplicationClass"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_main"
+        android:roundIcon="@mipmap/ic_main_round"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
@@ -13,16 +14,21 @@
         tools:ignore="AllowBackup"
         tools:targetApi="s">
         <activity
-            android:name=".src.main.MainActivity"
-            android:exported="true"
+            android:name=".src.splash.SplashActivity"
             android:screenOrientation="fullSensor"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.Splash"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".src.main.MainActivity"
+            android:exported="true"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
