--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <!-- 네트워크 통신을 위해 인터넷 권한을 추가했습니다.-->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- 맵 사용시 GPS를 사용하기 위해 권한을 추가했습니다.-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:name="com.konkuk.walku.config.ApplicationClass"
         android:icon="@mipmap/ic_main"
