--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,5 +94,7 @@ dependencies {
     // 스켈레톤 로딩 화면
     implementation "com.facebook.shimmer:shimmer:0.5.0"
 
+    implementation("com.google.android.gms:play-services-fitness:21.1.0")
+    implementation("com.google.android.gms:play-services-auth:20.2.0")
 
 }
