--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,8 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
+    implementation "com.github.skydoves:progressview:1.1.3"
+
     //
     implementation 'com.tbuonomo:dotsindicator:4.2'
 
