feat: 서울 주요 공원현황 API 연결 성공

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
             android:name=".src.main.home.map.walkMap.WalkMapActivity"
             android:exported="true"
             android:screenOrientation="fullSensor"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBarForMap" />
         <activity
             android:name=".src.main.home.map.walkMap.WalkMapSplashActivity"
             android:exported="true"
