--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,6 @@ dependencies {
     // 코루틴
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 
+    // - - Statistics for walk
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
