--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
     }
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.0' apply false
@@ -12,3 +15,4 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
